syntax = "proto3";

package xyz.stratalab.bridge.consensus.protobuf;

message Lvl {
  bytes amount = 1;
}

message SeriesToken {
  string id = 1;
  bytes amount = 2;
}

message GroupToken {
  string id = 1;
  bytes amount = 2;
}

message AssetToken {
  string groupId = 1;
  string seriesId = 2;
  bytes amount = 3;
}

message NodeCurrencyUnit {
  oneof currency {
    Lvl lvl = 1;
    SeriesToken seriesToken = 2;
    GroupToken groupToken = 3;
    AssetToken assetToken = 4;
  }
}


message NewBTCBlock {
  uint32 height = 1;
}

message SkippedBTCBlock {
  uint32 height = 1;
}

message SkippedStrataBlock {
  uint64 height = 1;
}

message NewStrataBlock {
  uint64 height = 1;
}

message BTCFundsDeposited {
  uint32 fundsDepositedHeight = 1;
  string address = 2;
  string txId = 3;
  uint32 vout = 4;
  bytes amount = 5; // sats
}

message BTCFundsWithdrawn {
  string txId = 1;
  uint64 vout = 2;
}

message NodeFundsDeposited {
  uint64 currentStrataBlockHeight = 1;
  string address = 2;
  string utxoTxId = 3;
  uint32 utxoIndex = 4;
  NodeCurrencyUnit amount = 5;
}

message NodeFundsWithdrawn {
  uint64 currentStrataBlockHeight = 1;
  string txId = 2;
  uint32 txIndex = 3;
  string secret = 4;
  NodeCurrencyUnit amount = 5;
}

message BlockchainEvent {
  oneof event {
    NewBTCBlock newBTCBlock = 1;
    SkippedBTCBlock skippedBTCBlock = 2;
    SkippedStrataBlock skippedStrataBlock = 3;
    NewStrataBlock newStrataBlock = 4;
    BTCFundsDeposited btcFundsDeposited = 5;
    BTCFundsWithdrawn btcFundsWithdrawn = 6;
    NodeFundsDeposited nodeFundsDeposited = 7;
    NodeFundsWithdrawn nodeFundsWithdrawn = 8;
  }
}